--- a/PART1/app/src/main/AndroidManifest.xml
+++ b/PART1/app/src/main/AndroidManifest.xml
@@ -15,13 +15,13 @@
         android:theme="@style/Theme.CurrencyConverter"
         tools:targetApi="31">
         <activity
-            android:name="com.example.tech_mart_application.activities.OnBoardingActivity"
+            android:name="com.example.currencyconverter.activities.OnBoardingActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="false" />
         <activity
-            android:name="com.example.tech_mart_application.activities.SplashScreenActivity"
+            android:name="com.example.currencyconverter.activities.SplashScreenActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
